# university-microservices

./: .gitattributes  .gitignore  .pre-commit-config.yaml  docker-compose.yml  readme.md
.cursor/: rules.mdc
.github/workflows/: ci.yml
code/: models.py  pyproject.toml
code/rabbitmq/: pyproject.toml  task1_queues.py  task2_direct.py  task2_fanout.py  task2_topic.py
code/services/booking/: Dockerfile  main.py  pyproject.toml  rabbitmq_client.py  schemas.py  user_service.py
code/services/booking/tests/: __init__.py  test_component.py  test_unit.py
code/services/game-catalog/: .coverage  Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py
code/services/game-catalog/tests/: __init__.py  conftest.py  test_integration.py
code/services/gateway/: Dockerfile  app.py  main.py  models.py  pyproject.toml
code/services/payment/: .coverage  Dockerfile  coverage.xml  grpc_server.py  main.py  payment_gateway.py  pyproject.toml  rabbitmq_client.py  schemas.py
code/services/payment/proto/: payment.proto
code/services/payment/tests/: __init__.py  test_component.py
code/services/rating/: Dockerfile  main.py  perspective_api.py  pyproject.toml  rabbitmq_client.py  schemas.py
code/services/rating/tests/: __init__.py  test_component.py  test_unit.py
code/services/rent/: Dockerfile  database.py  grpc_client.py  main.py  models.py  notification_service.py  pyproject.toml  rabbitmq_client.py  schemas.py
code/services/rent/tests/: __init__.py  conftest.py  test_integration.py
code/services/user-account/: .coverage  Dockerfile  auth.py  coverage.xml  database.py  main.py  models.py  pyproject.toml  schemas.py
code/services/user-account/tests/: __init__.py  conftest.py  test_integration.py
reports/1-4/: report.typ  split_svg.py
reports/1-4/unidraw/: 1-4.unidraw  задание1.unidraw
reports/5-8/: report.typ
reports/5-8/5/: commands.sh  requirements.txt
